fix(chezmoi): fix package installation script messages

--- a/.chezmoiscripts/run_once_before_00-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_00-install-packages.sh.tmpl
@@ -19,6 +19,7 @@ if ! command -v yay &> /dev/null; then
     echo "yay-bin bootstrapped successfully"
 fi
 
+echo "#### CLI packages installation completed successfully! ####"
 {{ end }}
 
 {{ if and (and (eq .chezmoi.os "linux") (.chezmoi.osRelease.id | lower | contains "arch")) (not (.chezmoi.kernel.osrelease | lower | contains "wsl")) -}}
@@ -30,6 +31,5 @@ sudo pacman -Syu --needed {{ range .packages.arch.desktop.pacman }} {{.}}{{ end 
 echo "#### Installing AUR desktop packages...####"
 yay -Syu --needed {{ range .packages.arch.desktop.aur }} {{.}}{{ end }}
 
+echo "#### Desktop packages installation completed successfully! ####"
 {{ end }}
-
-echo "#### Package installation completed successfully! ####"
