--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -30,6 +30,7 @@ alias ip='ip -color=auto'
 alias l='eza --icons=always'
 alias ls='eza --icons=always'
 alias ll='eza -la --icons=always'
+alias lg='lazygit'
 alias cat='bat'
 {{- end }}
 
