--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,3 +1,3 @@
 [data]
     # Check if we're running in WSL by looking for "microsoft" in the kernel version
-    wsl = {{ if (eq .chezmoi.os "linux") }}{{ contains "microsoft" (.chezmoi.kernel.version | lower) }}{{ else }}false{{ end }}
+    wsl = {{ if (eq .chezmoi.os "linux") }}{{ contains "microsoft" (.chezmoi.kernel.version | lower) }}true{{ else }}false{{ end }}
