fix(zsh): add alias for terraform command

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -17,6 +17,7 @@ alias grep='grep --color=always'
 alias ip='ip -color=auto'
 alias ll='ls -la'
 alias cls='clear'
+alias tf='terraform'
 
 #### Keybindings ####
 bindkey -e
